improved typography & img

--- a/index.html
+++ b/index.html
@@ -29,23 +29,25 @@
       <a href="https://www.google.com/" class="header__link">
         <img src="./img/25A1E2463C1A1375-1.png" alt="" class="header__img" />
       </a>
-      <div class="header__bottom d-flex">
-        <div class="flex__column">
-          <p class="header__address">
-            <i class="fa-sharp fa-solid fa-location-pin"></i>ul.Marcina Kromera
-            8/29, 10-130 Olsztyn
-          </p>
-          <p class="header__email">
-            <i class="fa-sharp fa-solid fa-envelope"></i
-            >furmanczykclinic@gmail.com
-          </p>
-        </div>
+      <div class="flex__column">
+        <p class="header__address">
+          <i class="fa-sharp fa-solid fa-location-pin"></i>ul.Marcina Kromera
+          8/29, 10-130 Olsztyn
+        </p>
+        <p class="header__email">
+          <i class="fa-sharp fa-solid fa-envelope"></i
+          >furmanczykclinic@gmail.com
+        </p>
+      </div>
 
-        <div class="d-flex">
-          <a href="#form">Zostaw email </a>
-          <a href=""><i class="fab fa-facebook-f"></i></a>
-          <a href=""><i class="fa-brands fa-instagram"></i></a>
-        </div>
+      <div class="d-flex header__btn">
+        <a href="#form" class="btn btn-email">Zostaw email </a>
+        <a href="https://www.facebook.com/" class="btn btn-fb"
+          ><i class="fab fa-facebook-f"></i
+        ></a>
+        <a href="https://www.instagram.com/" class="btn btn-ig"
+          ><i class="fa-brands fa-instagram"></i
+        ></a>
       </div>
     </header>
 
@@ -59,7 +61,7 @@
       </div>
 
       <img
-        src="./img/image-2-300x290.png"
+        src="./img/smiling-lady.png"
         alt="picture of a smiling lady"
         class="text-img__img"
       />
