--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <p>Sprawdź nasze usługi i zostaw swój email!</p>
       </div>
       <!-- Carousel -->
-      <div class="container">
+      <div class="container container__slide">
         <div class="splide bg-secondary">
           <div class="splide__slider">
             <div class="splide__track">
