--- a/index.html
+++ b/index.html
@@ -120,10 +120,7 @@
                   <p class="slide-p">Protetykaa</p>
                 </li>
                 <li class="splide__slide">
-                  <img
-                    src="./img/furmanczyk-landing-page-v2a-1.png"
-                    alt="diagnostykaa"
-                  />
+                  <img src="./img/endodoncja.png" alt="diagnostyka" />
                   <p class="slide-p">Diagnostyka</p>
                 </li>
               </ul>
