--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="colors.css" />
   </head>
+
   <body>
-    <header class="header d-flex flex-column">
+    <header class="header d-flex">
       <a href="https://www.google.com/" class="header__link">
         <img src="./img/25A1E2463C1A1375-1.png" alt="" class="header__img" />
       </a>
@@ -102,7 +103,7 @@
         <p>Sprawdź nasze usługi i zostaw swój email!</p>
       </div>
       <!-- Carousel -->
-      <div class="container container__slide">
+      <div class="box box__slide">
         <div class="splide bg-secondary">
           <div class="splide__slider">
             <div class="splide__track">
