other viewports added

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <div class="form" id="form"></div>
 
-    <div class="img-text d-flex flex-column">
+    <div class="img-text d-flex">
       <img
         src="./img/furmanczyk-landing-page-v2a-1.png"
         alt=""
@@ -91,40 +91,42 @@
 
     <div class="offer">
       <h1 class="title">Sprawdź ofertę</h1>
-      <div class="container">
-        <h2 class="subtitle d-flex flex-column">
-          Nie przegap. <span>Już niedługo otwarcie!</span>
-        </h2>
-        <p>
-          W naszej propozycji każdy z pacjentów znajdzie coś dla siebie - od
-          regularnego leczenia i diaagnostyki, po zaawansowane zabiegi
-          dentystyczne wraz z ulepszaniem uśmiechu.
-        </p>
-        <p>Sprawdź nasze usługi i zostaw swój email!</p>
-      </div>
-      <!-- Carousel -->
-      <div class="box box__slide">
-        <div class="splide bg-secondary">
-          <div class="splide__slider">
-            <div class="splide__track">
-              <ul class="splide__list">
-                <li class="splide__slide">
-                  <img src="./img/licowki.png" alt="licówki" />
-                  <p class="slide-p">Licówki</p>
-                </li>
-                <li class="splide__slide">
-                  <img src="./img/endodoncja.png" alt="endodoncja" />
-                  <p class="slide-p">Endodoncja</p>
-                </li>
-                <li class="splide__slide">
-                  <img src="./img/protetyka.png" alt="protetyka" />
-                  <p class="slide-p">Protetykaa</p>
-                </li>
-                <li class="splide__slide">
-                  <img src="./img/endodoncja.png" alt="diagnostyka" />
-                  <p class="slide-p">Diagnostyka</p>
-                </li>
-              </ul>
+      <div class="d-flex">
+        <div class="container">
+          <h2 class="subtitle d-flex flex-column">
+            Nie przegap. <span>Już niedługo otwarcie!</span>
+          </h2>
+          <p>
+            W naszej propozycji każdy z pacjentów znajdzie coś dla siebie - od
+            regularnego leczenia i diaagnostyki, po zaawansowane zabiegi
+            dentystyczne wraz z ulepszaniem uśmiechu.
+          </p>
+          <p>Sprawdź nasze usługi i zostaw swój email!</p>
+        </div>
+        <!-- Carousel -->
+        <div class="box box__slide">
+          <div class="splide bg-secondary">
+            <div class="splide__slider">
+              <div class="splide__track">
+                <ul class="splide__list">
+                  <li class="splide__slide">
+                    <img src="./img/licowki.png" alt="licówki" />
+                    <p class="slide-p">Licówki</p>
+                  </li>
+                  <li class="splide__slide">
+                    <img src="./img/endodoncja.png" alt="endodoncja" />
+                    <p class="slide-p">Endodoncja</p>
+                  </li>
+                  <li class="splide__slide">
+                    <img src="./img/protetyka.png" alt="protetyka" />
+                    <p class="slide-p">Protetyka</p>
+                  </li>
+                  <li class="splide__slide">
+                    <img src="./img/endodoncja.png" alt="diagnostyka" />
+                    <p class="slide-p">Diagnostyka</p>
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
