--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Furmańczyk</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon.png" />
 
     <link
       rel="stylesheet"
@@ -150,6 +151,9 @@
           </div>
         </div>
       </div>
+    </div>
+    <div class="text-line d-flex">
+      <p>Sprawdź naszą lokalizację w Olsztynie. Otwarcie wkrótce !</p>
     </div>
     <script
       src="https://kit.fontawesome.com/4e17153010.js"
