--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <div class="offer">
       <h1 class="title">Sprawdź ofertę</h1>
       <div class="d-flex">
-        <div class="container">
+        <div class="box-column">
           <h2 class="subtitle d-flex flex-column">
             Nie przegap. <span>Już niedługo otwarcie!</span>
           </h2>
