more small fixes

--- a/index.html
+++ b/index.html
@@ -130,20 +130,28 @@
               <div class="splide__track">
                 <ul class="splide__list">
                   <li class="splide__slide">
-                    <img src="./img/licowki.png" alt="licówki" />
-                    <p class="slide-p">Licówki</p>
+                    <a href="#">
+                      <img src="./img/licowki.png" alt="licówki" />
+                      <p class="slide-p">Licówki</p>
+                    </a>
                   </li>
                   <li class="splide__slide">
-                    <img src="./img/endodoncja.png" alt="endodoncja" />
-                    <p class="slide-p">Endodoncja</p>
+                    <a href="#">
+                      <img src="./img/endodoncja.png" alt="endodoncja" />
+                      <p class="slide-p">Endodoncja</p>
+                    </a>
                   </li>
                   <li class="splide__slide">
-                    <img src="./img/protetyka.png" alt="protetyka" />
-                    <p class="slide-p">Protetyka</p>
+                    <a href="#">
+                      <img src="./img/protetyka.png" alt="protetyka" />
+                      <p class="slide-p">Protetyka</p>
+                    </a>
                   </li>
                   <li class="splide__slide">
-                    <img src="./img/endodoncja.png" alt="diagnostyka" />
-                    <p class="slide-p">Diagnostyka</p>
+                    <a href="#">
+                      <img src="./img/endodoncja.png" alt="diagnostyka" />
+                      <p class="slide-p">Diagnostyka</p>
+                    </a>
                   </li>
                 </ul>
               </div>
